--- a/index_us.html
+++ b/index_us.html
@@ -21,6 +21,7 @@
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   </head>
+	
   <body>
 			
     <!-- Navigation -->
@@ -55,7 +56,7 @@
 		<div class="row align-items-center overlay">
 			<div class="text-center white_txt">
 				<h1>A few words about us</h1>
-				<p>Twelve years ago, the UCL Francophone Society was created, driven by this aim: to celebrate and promote the cultural and historical richness of Francophone countries. Today, we have grown to be one of the largest cultural societies on campus, with over 250 members. We are proud to be a group that shares our founders’ original vision: being a member of the Francophone Society is a chance to be a part of a diverse, supporting and fun community, as well as to share your passion for the French speaking world!</p>
+				<p>Twelve years ago, the UCL Francophone Society was created to celebrate and promote the cultural and historical richness of Francophone countries. Today, we have grown to be one of the largest cultural societies on campus, with over 250 members. We are proud to be a group that shares our founders’ original vision: being a member of the Francophone Society is a chance to be a part of a diverse, supporting and fun community, as well as to share your passion for the French speaking world!</p>
 			</div>
 		</div>
       </div>
@@ -64,6 +65,7 @@
 		<div class="row align-items-center overlay">
 			<div class="text-center white_txt_events">
 				<h1>Events</h1>
+				<p></p>
 				<tr>
 					<div class="row" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1000">
 						<div class="col-sm-4 col-md-4 col-lg-4 ">
@@ -153,48 +155,19 @@
 -->
 
     <!-- Add search bar for entering email adress -->
-    <div id="Newsletter" class="column align-items-center full_bg_news">
-			<div class=black_txt>
+    <div id="Newsletter" class="row align-items-center full_bg_news">
+			<div class="black_txt">
           		<p class="text-center">Don't forget to subscribe to our Newsletter!</p>
 				<p class="text-center">(we won't spam you, promise)</p>
 				<p class="text-center"> Please get in touch if you have any questions or ideas. We look forward to hearing from you!</p>
 			</div>
-				<!-- Begin MailChimp Signup Form -->
-					<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-					<style type="text/css">
-						#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-						/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-									We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-					</style>
-					<div id="mc_embed_signup">
-					<form action="https://facebook.us18.list-manage.com/subscribe/post?u=b00e840ece6dbcd9e9d13ad0e&amp;id=6c3e1c8f75" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-							<div id="mc_embed_signup_scroll">
-<!--						<h2>Subscribe to our mailing list</h2>-->
-					<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-					<div class="mc-field-group">
-						<label for="mce-FNAME">First Name </label>
-						<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
-					</div>
-					<div class="mc-field-group">
-						<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-					</label>
-						<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-					</div>
-						<div id="mce-responses" class="clear">
-							<div class="response" id="mce-error-response" style="display:none"></div>
-							<div class="response" id="mce-success-response" style="display:none"></div>
-						</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-									<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_b00e840ece6dbcd9e9d13ad0e_6c3e1c8f75" tabindex="-1" value=""></div>
-									<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-									</div>
-					</form>
-			</div>
-				<!--End mc_embed_signup-->
+				
 	</div>
     
 </div>
+	  
       <!-- Footer -->
-      <footer class="py-5 bg-black black_txt">
+      <footer class="black_txt">
         <div class="container_foot">
           <p class="m-0 text-center text-small">Copyright &copy; UCL Francophone Society 2018</p>
         </div>
