--- a/index_us.html
+++ b/index_us.html
@@ -55,7 +55,7 @@
       <div id="About" class="row align-items-center full_bg">
 		<div class="row align-items-center overlay">
 			<div class="text-center white_txt">
-				<h1>A few words about us</h1>
+				<h1 class="Titles">A few words about us</h1>
 				<p>Twelve years ago, the UCL Francophone Society was created to celebrate and promote the cultural and historical richness of Francophone countries. Today, we have grown to be one of the largest cultural societies on campus, with over 250 members. We are proud to be a group that shares our founders’ original vision: being a member of the Francophone Society is a chance to be a part of a diverse, supporting and fun community, as well as to share your passion for the French speaking world!</p>
 			</div>
 		</div>
@@ -64,7 +64,7 @@
       <div id="Events" class="row align-items-center full_bg">
 		<div class="row align-items-center overlay">
 			<div class="text-center white_txt_events">
-				<h1>Events</h1>
+				<h1 class="Titles">Events</h1>
 				<p></p>
 				<tr>
 					<div class="row" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1000">
@@ -75,7 +75,7 @@
 								</div>
 								<div class="section-widget-title">
 									<div class="small-border"></div>
-									<h2>Socials</h2>
+									<h2 class="Titles">Socials</h2>
 									<div class="small-border"></div>
 								</div>
 								<div class="section-widget-content">
@@ -89,7 +89,7 @@
 								</div>
 								<div class="section-widget-title">
 									<div class="small-border"></div>
-									<h2>Talks</h2>
+									<h2 class="Titles">Talks</h2>
 									<div class="small-border"></div>
 								</div>
 								<div class="section-widget-content">
@@ -104,7 +104,7 @@
 								</div>
 								<div class="section-widget-title">
 									<div class="small-border"></div>
-									<h2>With other societies</h2>
+									<h2 class="Titles">With other societies</h2>
 									<div class="small-border"></div>
 								</div>
 								<div class="section-widget-content">
@@ -121,7 +121,7 @@
     <div id="Classes" class="row align-items-center full_bg">
 		<div class="row align-items-center overlay">
 			<div class="text-center white_txt">
-				<h1>Classes</h1>
+				<h1 class="Titles">Classes</h1>
 				<p>We organise <strong class="red_txt">free</strong> weekly classes taught by native speakers at four different levels* for students wanting to learn more about the French language and culture.</p>
 				<p>*Levels are aligned to the Common European Framework of Reference for Leanguages (CEFR).</p>
 				<form>
@@ -135,7 +135,7 @@
 		<div class="row align-items-center overlay">
 			<div>
 				<div class="text-center white_txt">
-					<h1>Le Journal</h1>
+					<h1 class="Titles">Le Journal</h1>
 					<p>The one and only Francophone Newspaper on campus, welcomes new writers and editors every year. Visit their website if you would like to learn more about it and get involved!</p>
 					<form>
 						<button class="btn btn-outline-light" onclick="window.open('https://lejournalucl.com/', '_blank')"> The Website</button>
