--- a/index_us.html
+++ b/index_us.html
@@ -20,6 +20,12 @@
 	 
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
+	<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+		<style type="text/css">
+			#mc_embed_signup{background:#fff; clear:left; font:25px Helvetica,Arial,sans-serif; width:100%;}
+			/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+			   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+		</style>
   </head>
 	
   <body>
@@ -156,18 +162,29 @@
 
     <!-- Add search bar for entering email adress -->
     <div id="Newsletter" class="row align-items-center full_bg_news">
-			<div class="black_txt">
-          		<p class="text-center">Don't forget to subscribe to our Newsletter!</p>
-				<p class="text-center">(we won't spam you, promise)</p>
-				<p class="text-center"> Please get in touch if you have any questions or ideas. We look forward to hearing from you!</p>
+		
+						<!-- Begin MailChimp Signup Form -->
+			
+			<div id="mc_embed_signup">
+			<form action="https://facebook.us14.list-manage.com/subscribe/post?u=71bc3c33ac4c2ad0594444ab5&amp;id=d08685af9d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+				<div id="mc_embed_signup_scroll">
+					<div class="mc_embed_signup">
+						<label for="mce-EMAIL">Don't forget to subscribe to our Newsletter</label>
+						<label for="mce-EMAIL">(No spam, just relevant information!)</label>
+					</div>
+					<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+					<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+					<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_71bc3c33ac4c2ad0594444ab5_d08685af9d" tabindex="-1" value=""></div>
+					<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+				</div>
+			</form>
 			</div>
-				
-	</div>
-    
+			<!--End mc_embed_signup-->
+	</div> 
 </div>
 	  
       <!-- Footer -->
-      <footer class="black_txt">
+      <footer class="black_txt" style="padding-bottom: 20px">
         <div class="container_foot">
           <p class="m-0 text-center text-small">Copyright &copy; UCL Francophone Society 2018</p>
         </div>
