--- a/committee.html
+++ b/committee.html
@@ -53,7 +53,7 @@
 				<div class="col-md-6 col-sm-6 col-xl-6">
 					<div class="our-team">
 						<div class="pic">
-							<img src="media/napoleon.jpg" alt="">
+							<img src="media/maxime.JPG" alt="">
 							<p href="#" class="read-more">Welcome everyone! I am a third year Astrophysics student. I have been a member of the Society throughout my time at UCL which helped me meet loads of fantastic people. I am very down to Earth but we’ll shoot for the stars and make this year memorable!</p>
 						</div>
 						<div class="team-content">
@@ -95,7 +95,7 @@
 				<div class="col-md-6 col-sm-6 col-xl-6">
 					<div class="our-team">
 						<div class="pic">
-							<img src="media/napoleon.jpg" alt="">
+							<img src="media/lesley.jpg" alt="">
 							<a href="#" class="read-more">read more</a>
 						</div>
 						<div class="team-content">
@@ -107,7 +107,7 @@
 				<div class="col-md-6 col-sm-6 col-xl-6">
 						<div class="our-team">
 							<div class="pic">
-								<img src="media/napoleon.jpg" alt="">
+								<img src="media/caroline.jpg" alt="">
 								<a href="#" class="read-more">read more</a>
 							</div>
 							<div class="team-content">
@@ -119,7 +119,7 @@
 				<div class="col-md-6 col-sm-6 col-xl-6">
 						<div class="our-team">
 							<div class="pic">
-								<img src="media/napoleon.jpg" alt="">
+								<img src="media/sofia.jpg" alt="">
 								<a href="#" class="read-more">read more</a>
 							</div>
 							<div class="team-content">
