--- a/index_us.html
+++ b/index_us.html
@@ -77,7 +77,7 @@
 						<div class="col-sm-4 col-md-4 col-lg-4 ">
 							<div class="section-widget section2-widget-1">
 								<div class="section-widget-icon">
-									<img class="drinks" src="/media/drinks_2.png">
+									<img class="drinks" src="/media/events/drinks_2.png">
 								</div>
 								<div class="section-widget-title">
 									<div class="small-border"></div>
@@ -91,7 +91,7 @@
 						</div>
 						<div class="col-sm-4 col-md-4 col-lg-4">
 							<div class="section-widget section2-widget-2">
-								<div class="section-widget-icon"><img class="podium" src="/media/podium.png">
+								<div class="section-widget-icon"><img class="podium" src="/media/events/podium.png">
 								</div>
 								<div class="section-widget-title">
 									<div class="small-border"></div>
@@ -106,7 +106,7 @@
 						
 						<div class="col-sm-4 col-md-4 col-lg-4">
 							<div class="section-widget section2-widget-3">
-								<div class="section-widget-icon"><img class="societies" src="/media/societies.png">
+								<div class="section-widget-icon"><img class="societies" src="/media/events/societies.png">
 								</div>
 								<div class="section-widget-title">
 									<div class="small-border"></div>
