--- a/committee.html
+++ b/committee.html
@@ -53,8 +53,8 @@
 				<div class="col-md-6 col-sm-6 col-xl-6">
 					<div class="our-team">
 						<div class="pic">
-							<img src="media/maxime.JPG" alt="">
-							<p href="#" class="read-more">Welcome everyone! I am a third year Astrophysics student. I have been a member of the Society throughout my time at UCL which helped me meet loads of fantastic people. I am very down to Earth but we’ll shoot for the stars and make this year memorable!</p>
+							<img src="media/committee/maxime.JPG" alt="">
+<!--							<p href="#" class="read-more">Welcome everyone! I am a third year Astrophysics student. I have been a member of the Society throughout my time at UCL which helped me meet loads of fantastic people. I am very down to Earth but we’ll shoot for the stars and make this year memorable!</p>-->
 						</div>
 						<div class="team-content">
 							<h3 class="title">Maxime Redstone</h3>
@@ -66,8 +66,8 @@
 				<div class="col-md-6 col-sm-6 col-xl-6">
 					<div class="our-team">
 						<div class="pic">
-							<img src="media/auguste.jpg" alt="">
-							<p href="#" class="read-more">I’m a second year Natural Sciences student, reading Physical Chemistry and Statistics, and I make sure that all of our amazing events are priced fairly while we grow to new (financial) heights as a society with the help of sponsors and such. Hope to see you at our Cheese and Wine tasting sessions, our movie screenings, and everything else!</p>
+							<img src="media/committee/auguste.jpg" alt="">
+<!--							<p href="#" class="read-more">I’m a second year Natural Sciences student, reading Physical Chemistry and Statistics, and I make sure that all of our amazing events are priced fairly while we grow to new (financial) heights as a society with the help of sponsors and such. Hope to see you at our Cheese and Wine tasting sessions, our movie screenings, and everything else!</p>-->
 						</div>
 						<div class="team-content">
 							<h3 class="title">Auguste Baum</h3>
@@ -83,8 +83,8 @@
 				<div class="col-md-6 col-sm-6 col-xl-6">
 					<div class="our-team">
 						<div class="pic">
-							<img src="media/charlotte.jpg" alt="">
-							<p href="#" class="read-more">Hi! I'm an English Literature student, and my fresher year at UCL would not have been the same without the FrancoSoc. That's why I'm committed to spreading the word about our amazing events and making our society grow even more - so come join us for another amazing year!</p>
+							<img src="media/committee/charlotte.jpg" alt="">
+<!--							<p href="#" class="read-more">Hi! I'm an English Literature student, and my fresher year at UCL would not have been the same without the FrancoSoc. That's why I'm committed to spreading the word about our amazing events and making our society grow even more - so come join us for another amazing year!</p>-->
 						</div>
 						<div class="team-content">
 							<h3 class="title">Charlotte Gross</h3>
@@ -95,8 +95,8 @@
 				<div class="col-md-6 col-sm-6 col-xl-6">
 					<div class="our-team">
 						<div class="pic">
-							<img src="media/lesley.jpg" alt="">
-							<p href="#" class="read-more">read more</p>
+							<img src="media/committee/lesley.jpg" alt="">
+<!--							<p href="#" class="read-more">read more</p>-->
 						</div>
 						<div class="team-content">
 							<h3 class="title">Lesley Farrah</h3>
@@ -107,8 +107,8 @@
 				<div class="col-md-6 col-sm-6 col-xl-6">
 						<div class="our-team">
 							<div class="pic">
-								<img src="media/caroline.jpg" alt="">
-								<p href="#" class="read-more">read more</p>
+								<img src="media/committee/caroline.jpg" alt="">
+<!--								<p href="#" class="read-more">read more</p>-->
 							</div>
 							<div class="team-content">
 								<h3 class="title">Caroline Bouat</h3>
@@ -119,8 +119,8 @@
 				<div class="col-md-6 col-sm-6 col-xl-6">
 						<div class="our-team">
 							<div class="pic">
-								<img src="media/sofia.jpg" alt="">
-								<p href="#" class="read-more">read more</p>
+								<img src="media/committee/sofia.jpg" alt="">
+<!--								<p href="#" class="read-more">read more</p>-->
 							</div>
 							<div class="team-content">
 								<h3 class="title">Sofia Bouguerra</h3>
@@ -131,84 +131,6 @@
 			</div>
 		</div>
 		
-<!--
-		<div class="row">
-			<div class="column">
-				<div class="card image center">
-					<img src="/media/napoleon.jpg" alt="Maxime" style="width:45%" align="center">
-					<div class="container">
-						<h2>President - Maxime Redstone</h2>
-					</div>
-				</div>
-			</div>
-			<div class="column">
-				<div class="card taille">
-					<img src="/media/auguste.jpg" atl="Auguste" style="width:45%">
-					<div class="container">
-						<h2>Treasurer - Auguste Baum</h2>
-					</div>
-				</div>
-			</div>
-		</div>
--->
-		
-<!--		<div class="committee_gradient">
-			<div class="row">
-				<div class="column image_right">
-					<img src="/media/napoleon.jpg" align="right" style:"float:right">
-				<div class="card_right">
-					<div class="card-title text-center black_txt typewriter">President - Maxime Redstone</div>
-					<p class="card-text text-left black_txt_com">Welcome everyone! I am a third year Astrophysics student. I have been a member of the Society throughout my time at UCL which helped me meet loads of fantastic people. I am very down to Earth but we’ll shoot for the stars and make this year memorable!</p>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="column image_left">
-					<div class="profile-image_treas" align="left" style:"float:left">
-						<img src="/media/auguste.jpg" width="300" height="300" align="left">
-	<!--					<span class="profile_hover_treas"></span>
-					</div>
-				<div class="card_left">
-					<div class="card-title text-center black_txt typewriter">Treasurer - Auguste Baum</div>
-					<p class="card-text text-center black_txt_com">I’m a second year Natural Sciences student, reading Physical Chemistry and Statistics, and I make sure that all of our amazing events are priced fairly while we grow to new (financial) heights as a society with the help of sponsors and such. Hope to see you at our Cheese and Wine tasting sessions, our movie screenings, and everything else!</p>
-				</div>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="column image_right">
-					<div class="profile-image_com" align="right" style:"float:right">
-						<img src="/media/charlotte.jpg" width="300" height="300" align="right">
-	<!--					<span class="profile_hover_com"></span>
-					</div>
-				<div class="card_right">
-					<div class="card-title text-center black_txt typewriter">Communication Officer - Charlotte Gross</div>
-					<p class="card-text text-left black_txt_com"> Hi! I'm an English Literature student, and my fresher year at UCL would not have been the same without the FrancoSoc. That's why I'm committed to spreading the word about our amazing events and making our society grow even more - so come join us for another amazing year!</p>
-				</div>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="column image_left">
-					<img src="/media/bernard.jpeg" align="left" style:"float:right">
-				<div class="card_left">
-					<div class="card-title text-center black_txt typewriter">Social Officer - Lesley Farrah</div>
-					<p class="card-text text-right black_txt_com">Hi! I’m Charlotte, the FrancoSoc’s Communication Officer. I'm an English Literature student, and my fresher year at UCL would not have been the same without the FrancoSoc. That's why I'm committed to spreading the word about our amazing events and making our society grow even more - so come join us for another amazing year!</p>
-				</div>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="column image_right">
-					<img src="/media/napoleon.jpg" align="right" style:"float:right">
-				<div class="card_right">
-					<div class="card-title text-center black_txt typewriter">Education Officer - Caroline Bouat</div>
-					<p class="card-text text-left black_txt_com"> Hi! I’m Charlotte. I'm an English Literature student, and my fresher year at UCL would not have been the same without the FrancoSoc. That's why I'm committed to spreading the word about our amazing events and making our society grow even more - so come join us for another amazing year!</p>
-				</div>
-				</div>
-			</div>
-		</div
--->
 		 <!-- Footer -->
       		<footer class="py-5 bg-black">
 				<div class="container">
