--- a/classes.html
+++ b/classes.html
@@ -31,13 +31,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarFrancosoc">
               <ul class="nav navbar-nav ml-auto">
-                  <a class="nav-link" href='/index_us.html#About'>About us</a>
-                  <a class="nav-link" href="/index_us.html#Events">Events</a>
-                  <a class="nav-link" href="/index_us.html#Classes">Classes</a>
+                  <a class="nav-link" href='/index.html#About'>About us</a>
+                  <a class="nav-link" href="/index.html#Events">Events</a>
+                  <a class="nav-link" href="/index.html#Classes">Classes</a>
                   <li><a class="nav-link" href="committee.html">Committee</a></li>
-                  <a class="nav-link" href="/index_us.html#Le_Journal">Le Journal</a>
-                  <a class="nav-link" href="/index_us.html#Sponsors">Sponsors</a>
-                  <a class="nav-link" href="/index_us.html#Newsletter">Newsletter</a>
+                  <a class="nav-link" href="/index.html#Le_Journal">Le Journal</a>
+                  <a class="nav-link" href="/index.html#Sponsors">Sponsors</a>
+                  <a class="nav-link" href="/index.html#Newsletter">Newsletter</a>
 				  <a class="fa fa-facebook" href="http://www.facebook.com/uclfrancophonesociety" target="_blank" ></a>
 			  	  <a class="fa fa-instagram" href="https://www.instagram.com/uclufrancosoc/" target="_blank"></a>
               </ul>
