--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+	<meta name="description" content="UCL Francophone Society Website"> 
+	<meta name="keywords" content="UCL, Francophone Society, Society">
+	 
+		  
     <link rel="shortcut icon" type="image/svg+xml" href="../media/logo_Franco.jpg"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="UCL Francophone Society">
+    <meta name="author" content="UCL Francophone Society">
 
     <title>UCL Francophone Society</title>
 
