charlotte/lesley modif

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <!--              <a class="nav-link" href="#Sponsors">Sponsors</a>-->
               <a class="nav-link" href="#Newsletter">Newsletter</a>
 			  <a class="fa fa-facebook" href="http://www.facebook.com/uclfrancophonesociety" target="_blank" ></a>
-			  <a class="fa fa-instagram" href="https://www.instagram.com/uclufrancosoc/" target="_blank"></a>
+			  <a class="fa fa-instagram" href="https://www.instagram.com/uclfrancosoc/" target="_blank"></a>
           </ul>
         </div>
       </div>
@@ -67,7 +67,11 @@
 			<div class="text-center white_txt">
 				<h1 class="Titles">A few words about us</h1>
 				<p>Twelve years ago, the UCL Francophone Society was created to celebrate and promote the cultural and historical richness of Francophone countries. Today, we have grown to be one of the largest cultural societies on campus, with over 250 members. We are proud to be a group that shares our founders’ original vision: being a member of the Francophone Society is a chance to be a part of a diverse, supporting and fun community, as well as to share your passion for the French speaking world!</p>
+				<form>
+					<button class="btn btn-outline-light" onclick="window.open('http://studentsunionucl.org/clubs-societies/francophone-society', '_blank')">Get your membership</button>
+				</form>
 			</div>
+			
 		</div>
       </div>
 
@@ -89,7 +93,7 @@
 									<div class="small-border"></div>
 								</div>
 								<div class="section-widget-content">
-									<p>There’s no better way to bond than over a nice glass of Bordeaux, or at karaoke as you sing iconic French-music to the top of your lungs, or let loose on the dance floor at European Nights - well, the Francophone Society offers you all of these!</p>
+									<p>There’s no better way to bond than over a nice glass of Bordeaux, or at karaoke as you sing iconic French-music at the top of your lungs, or let loose on the dance floor at European Nights - well, the Francophone Society offers you all of these!</p>
 								</div>
 							</div>
 						</div>
