--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 	<meta name="description" content="UCL Francophone Society Website"> 
-	<meta name="keywords" content="UCL, Francophone Society, Society">
+	<meta name="keywords" content="UCL, Francophone Society, Society, ucl francophone society, ">
 	 
 		  
     <link rel="shortcut icon" type="image/svg+xml" href="../media/logo_Franco.jpg"/>
