update pictures committee + margins text

--- a/committee.html
+++ b/committee.html
@@ -48,12 +48,16 @@
           </div>
         </nav>
 	
-		<div class="container_pres">
+		<div class="container col-md-6 col-sm-6 col-xl-6">
+			<p class="greetings">Meet the team!</p>
+		</div>
+		
+		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-sm-6 col-xl-6">
 					<div class="our-team">
 						<div class="pic">
-							<img src="media/committee/maxime.JPG" alt="">
+							<img src="media/committee/president.JPG" alt="">
 <!--							<p href="#" class="read-more">Welcome everyone! I am a third year Astrophysics student. I have been a member of the Society throughout my time at UCL which helped me meet loads of fantastic people. I am very down to Earth but we’ll shoot for the stars and make this year memorable!</p>-->
 						</div>
 						<div class="team-content">
@@ -119,7 +123,7 @@
 				<div class="col-md-6 col-sm-6 col-xl-6">
 						<div class="our-team">
 							<div class="pic">
-								<img src="media/committee/sofia.jpg" alt="">
+								<img src="media/committee/sofiaucl.jpg" alt="">
 <!--								<p href="#" class="read-more">read more</p>-->
 							</div>
 							<div class="team-content">
