--- a/events.html
+++ b/events.html
@@ -56,95 +56,35 @@
 			<p class="greetings">Events 2018/2019</p>
 		</div>
 
-		<div>
-
-			<!-- JFC-->
-			<div class="w3-display-container mySlides">
-				<p class="description">"Will AI kill democracy" by Jean François Copé at King's College London.</p>
-				<button class="btn w3-button w3-display-left w3-black" onclick="plusDivs(-1)">&#10094;</button>
-				<button class="w3-button w3-display-right w3-black" onclick="plusDivs(1)">&#10095;</button>
-				<img class="rectangle image_size" src="media/events/JFC-Conference-AI.jpg">
+		<div class="row">
+			<div class="column hvrbox">
+				<img class="hvrbox-layer_bottom" src="media/events/Brexit_conf.JPG" alt="brexit" style="width:100%; height: 100%;">
+				<div class="hvrbox-layer_top">
+					<div class="hvrbox-text">"Eu and British citizens: What next?" by Massimo Ungaro (Italian MP in the UK) and Alessandro Spano at UCL with the Italian Society.</div>
+				</div>
 			</div>
-			
-			<!-- Football-->
-			<div class="w3-display-container mySlides">
-				<p class="description">French team in the first UCL International Football Tournament with 11 other cultural societies</p>
-				<button class="btn w3-button w3-display-left w3-black" onclick="plusDivs(-1)">&#10094;</button>
-				<button class="w3-button w3-display-right w3-black" onclick="plusDivs(1)">&#10095;</button>
-				<img class="rectangle image_size" src="
-				media/events/Foot_tournament.jpg" style="align-content: center; background-repeat: ">
+			<div class="column hvrbox">
+				<img class="hvrbox-layer_bottom" src="media/events/Foot_tournament.jpg" alt="foot" style="width:100%; height: 100%;">
+					<div class="hvrbox-layer_top">
+					<div class="hvrbox-text">French team in the first UCL International Football Tournament with 11 other cultural societies.</div>
+				</div>
 			</div>
-
-			<!-- Brexit-->
-			<div class="w3-display-container mySlides">
-				<p class="description">"Eu and British citizens: What next?" by Massimo Ungaro (Italian MP in the UK) and Alessandro Spano at UCL with the Italian Society.</p>
-				<button class="btn w3-button w3-display-left w3-black" onclick="plusDivs(-1)">&#10094;</button>
-				<button class="w3-button w3-display-right w3-black" onclick="plusDivs(1)">&#10095;</button>
-				<img class="rectangle image_size" src="media/events/Brexit_conf.JPG">
-			</div>
-
-			<!-- European-->
-
-			<!-- Armistice-->
-
-			<!-- Ball-->
-			
-			<!-- Cheese and Wine-->
-			<!-- Commit try-->
-			
-			<!-- Huis Clos Sartre-->
-			<div class="w3-display-container mySlides">
-				<p class="description">"Huis Clos" by Jean Paul Sartre. Directed by Sofia Bouguerra, Charlotte Gross and Jerome Sche.</p>
-				<button class="btn w3-button w3-display-left w3-black" onclick="plusDivs(-1)">&#10094;</button>
-				<button class="w3-button w3-display-right w3-black" onclick="plusDivs(1)">&#10095;</button>
-				<img class="rectangle image_size" src="media/events/HuisClosSartre.JPG">
-			</div>
-
 		</div>
-
-		<script>
-			var slideIndex = 1;
-			showDivs(slideIndex);
-
-			function plusDivs(n) {
-				showDivs(slideIndex += n);
-			}
-
-			function showDivs(n) {
-				var i;
-				var x = document.getElementsByClassName("mySlides");
-				if (n > x.length) {slideIndex = 1} 
-				if (n < 1) {slideIndex = x.length} ;
-				for (i = 0; i < x.length; i++) {
-					x[i].style.display = "none"; 
-				}
-				x[slideIndex-1].style.display = "block"; 
-			}
-			
-			
-			var frame = $("#imageFrame");
-			var img = frame.find('img');
-
-			// note: naturalSize does not work in IE8
-			var realSize = {
-				width:  img.get(0).naturalWidth,
-				height: img.get(0).naturalHeight
-			};
-
-			var bounds = {
-				width:  frame.width(),
-				height: frame.height()
-			};
-
-			var resized = fitRectIntoBounds(realSize, bounds);
-
-			img.css({
-				width:  resized.width,
-				height: resized.height,
-				top:    (bounds.height - resized.height) / 2,
-				left:   (bounds.width - resized.width) / 2
-			});
-		</script>
+		
+		<div class="row">
+			<div class="column hvrbox">
+				<img class="hvrbox-layer_bottom" src="media/events/JFC-Conference-AI.jpg" alt="jfc" style="width:100%; height: 100%;">
+				<div class="hvrbox-layer_top">
+					<div class="hvrbox-text">"Will AI kill democracy" by Jean François Copé at King's College London.</div>
+				</div>
+			</div>
+			<div class="column hvrbox">
+				<img class="hvrbox-layer_bottom" src="media/events/HuisClosSartre.JPG" alt="huisclos" style="width:100%; height: 100%;">
+				<div class="hvrbox-layer_top">
+					<div class="hvrbox-text">"Huis Clos" by Jean Paul Sartre. Directed by Sofia Bouguerra, Charlotte Gross and Jerome Sche.</div>
+				</div>
+			</div>
+		</div>
 
 		<!-- Footer -->
 		<footer class="py-5 bg-black">
